--- a/lessons/python_intro/python_review_and_best_practices.ipynb
+++ b/lessons/python_intro/python_review_and_best_practices.ipynb
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -953,13 +953,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'multiply_by_two' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-2625c69716f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmultiply_by_two\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__doc__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'multiply_by_two' is not defined"
+     ]
+    }
+   ],
    "source": [
     "multiply_by_two.__doc__"
    ]
@@ -1005,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1021,13 +1033,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the loop\n"
+     ]
+    }
+   ],
    "source": [
     "test_value = 1\n",
     "\n",
@@ -1037,13 +1057,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 as bool:  True\n",
+      "0 as bool:  False\n",
+      "1e-05 as bool:  True\n",
+      "-50000 as bool:  True\n"
+     ]
+    }
+   ],
    "source": [
     "def evaluate_as_bool(value):\n",
     "    \"\"\"\n",
@@ -1068,13 +1099,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[] as bool:  False\n",
+      "['test'] as bool:  True\n",
+      "['test', 2, 5] as bool:  True\n",
+      "('test', 2, 5) as bool:  True\n",
+      "() as bool:  False\n",
+      "{} as bool:  False\n",
+      "{'test'} as bool:  True\n"
+     ]
+    }
+   ],
    "source": [
     "evaluate_as_bool([])\n",
     "evaluate_as_bool([\"test\"])\n",
@@ -1098,13 +1143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a terrible way to write Python\n",
+      "Yeah, this is much nicer.\n"
+     ]
+    }
+   ],
    "source": [
     "a_list = [1,2,3,4]\n",
     "\n",
@@ -1130,13 +1184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False as bool:  True\n",
+      " as bool:  False\n",
+      "  as bool:  True\n"
+     ]
+    }
+   ],
    "source": [
     "evaluate_as_bool('False')\n",
     "evaluate_as_bool('')\n",
@@ -1172,9 +1236,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sam', 36, 85.95]\n",
+      "['Carol', 75, 53.65]\n",
+      "['Sam', 90, 95.37]\n",
+      "['Doug', 61, 19.8]\n",
+      "['Sam', 41, 45.22]\n",
+      "['Doug', 29, 42.98]\n",
+      "['Oliver', 61, 95.74]\n",
+      "['Carol', 32, 17.12]\n",
+      "['Tari', 27, 68.83]\n",
+      "['Tari', 81, 62.47]\n"
+     ]
+    }
+   ],
    "source": [
     "for row in table1:\n",
     "    print(row)"
@@ -1189,9 +1270,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sam', 36, 85.95]\n",
+      "['Carol', 75, 53.65]\n",
+      "['Sam', 90, 95.37]\n",
+      "['Doug', 61, 19.8]\n",
+      "['Sam', 41, 45.22]\n",
+      "['Doug', 29, 42.98]\n",
+      "['Oliver', 61, 95.74]\n",
+      "['Carol', 32, 17.12]\n",
+      "['Tari', 27, 68.83]\n",
+      "['Tari', 81, 62.47]\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(table1)):\n",
     "    print(table1[i])"
@@ -1206,9 +1304,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 ['Sam', 36, 85.95] ['Sam', 36, 85.95]\n",
+      "1 ['Carol', 75, 53.65] ['Carol', 75, 53.65]\n",
+      "2 ['Sam', 90, 95.37] ['Sam', 90, 95.37]\n",
+      "3 ['Doug', 61, 19.8] ['Doug', 61, 19.8]\n",
+      "4 ['Sam', 41, 45.22] ['Sam', 41, 45.22]\n",
+      "5 ['Doug', 29, 42.98] ['Doug', 29, 42.98]\n",
+      "6 ['Oliver', 61, 95.74] ['Oliver', 61, 95.74]\n",
+      "7 ['Carol', 32, 17.12] ['Carol', 32, 17.12]\n",
+      "8 ['Tari', 27, 68.83] ['Tari', 27, 68.83]\n",
+      "9 ['Tari', 81, 62.47] ['Tari', 81, 62.47]\n"
+     ]
+    }
+   ],
    "source": [
     "for ix, row in enumerate(table1):\n",
     "    print(ix, row, table1[ix])"
@@ -1230,9 +1345,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "a_list_of_numbers = [1,2,3,4,5,7]\n",
     "\n",
@@ -1258,9 +1381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found an 'e'\n"
+     ]
+    }
+   ],
    "source": [
     "test_string = \"test string of words, yep\"\n",
     "\n",
@@ -1279,9 +1410,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found a '1'\n"
+     ]
+    }
+   ],
    "source": [
     "test_list = [1,2,3,4,5]\n",
     "\n",
@@ -1311,13 +1450,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('bob', 32, 72000), ('alice', 29, 115000), ('charlie', 25, 95000)]\n"
+     ]
+    }
+   ],
    "source": [
     "# The columns are (name, age, salary)\n",
     "alumni = [('bob',32,72000),\n",
@@ -1330,13 +1477,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('alice', 29, 115000), ('bob', 32, 72000), ('charlie', 25, 95000)]\n"
+     ]
+    }
+   ],
    "source": [
     "alumni.sort() # This is the method that a list has to sort itself\n",
     "print(alumni)"
@@ -1353,9 +1508,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('alice', 29, 115000), ('bob', 32, 72000), ('charlie', 25, 95000)]\n"
+     ]
+    }
+   ],
    "source": [
     "alumni = [('bob',32,72000),\n",
     "          ('alice',29,115000),\n",
@@ -1374,13 +1537,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('charlie', 25, 95000), ('bob', 32, 72000), ('alice', 29, 115000)]\n"
+     ]
+    }
+   ],
    "source": [
     "print(sorted(alumni, reverse=True))"
    ]
@@ -1394,13 +1565,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('bob', 32, 72000), ('charlie', 25, 95000), ('alice', 29, 115000)]\n"
+     ]
+    }
+   ],
    "source": [
     "print(sorted(alumni,key=lambda row: row[2]))"
    ]
@@ -1414,9 +1593,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('bob', 32, 72000), ('charlie', 25, 95000), ('alice', 29, 115000)]\n"
+     ]
+    }
+   ],
    "source": [
     "def get_second_column_of_row(row):\n",
     "    \"\"\"\n",
@@ -1449,13 +1636,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list should have an even number of elements",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-56-8f86951319c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mclass_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_list\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m!=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'list should have an even number of elements'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: list should have an even number of elements"
+     ]
+    }
+   ],
    "source": [
     "class_list = [1,2,3]\n",
     "if len(class_list) % 2 !=0:\n",
@@ -1471,9 +1670,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Input must be a list!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-57-9f10b35ba3b5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_to_sum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msum_up_a_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-57-9f10b35ba3b5>\u001b[0m in \u001b[0;36msum_up_a_list\u001b[0;34m(list_to_sum)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mTakes\u001b[0m \u001b[0ma\u001b[0m \u001b[0mlist\u001b[0m \u001b[0mof\u001b[0m \u001b[0mnumbers\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mreturns\u001b[0m \u001b[0mthe\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \"\"\"\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_to_sum\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Input must be a list!\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_to_sum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Input must be a list!"
+     ]
+    }
+   ],
    "source": [
     "def sum_up_a_list(list_to_sum):\n",
     "    \"\"\"\n",
@@ -1487,9 +1699,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "print(sum_up_a_list([1,2,3]))"
    ]
@@ -1514,9 +1734,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trying to divide\n",
+      "\n",
+      "Oops, forgot to make it a number\n",
+      "0.5\n"
+     ]
+    }
+   ],
    "source": [
     "x = \"1\" # this is a string version of 1, can't do math on it\n",
     "\n",
@@ -1539,13 +1770,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¯\\_(ツ)_/¯\n"
+     ]
+    }
+   ],
    "source": [
     "del x # Let's make sure x doesn't exist\n",
     "\n",
@@ -1568,13 +1807,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-63-bd9a851fbea7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"x could not be made a string\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    str(x)\n",
@@ -1594,17 +1845,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOT A NUMBER\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here. \n",
-    "\n",
+    "def number_tester(x):\n",
+    "    try:\n",
+    "        print(int(x))\n",
+    "    except:\n",
+    "        print(\"NOT A NUMBER\")\n",
+    "    \n",
     "\n",
     "\n",
     "# Test cases:\n",
-    "# your_function_name(\"Steve\") -> \"NOT A NUMBER\"\n",
-    "# your_function_name(5.41) -> 5"
+    "number_tester(\"Steve\")\n",
+    "number_tester(5.41) "
    ]
   },
   {
@@ -1631,13 +1896,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1,2,3]\n",
     "b = a\n",
@@ -1663,13 +1937,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1,2,3]\n",
     "b = list(a)\n",
