read pick saving object for later

--- a/lessons/python_advanced/pickle_saving_objects_for_later.ipynb
+++ b/lessons/python_advanced/pickle_saving_objects_for_later.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python Version: 3.7.5 (default, Oct 25 2019, 10:52:18) \n",
+      "[Clang 4.0.1 (tags/RELEASE_401/final)] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(\"Python Version:\", sys.version, '\\n')"
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,18 +59,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'CA': [10, 0, 17, 33, 44, 55, 18, 40, 51, 1, 37, 27, 29, 61, 25, 21, 50, 11, 49, 34, 60, 65, 22, 56, 61, 4, 14, 48, 24, 64, 7, 26, 10, 1, 3, 24, 7, 54, 10, 6, 65, 18, 57, 20, 65, 54, 31, 36, 60, 20, 39, 6, 41, 60, 41, 38, 33, 44, 56, 8, 28, 13, 8, 27, 13, 20, 29, 24, 51, 5, 1, 27, 52, 57, 21, 18, 25, 45, 50, 58, 9, 21, 32, 48, 39, 63, 38, 42, 55, 38, 45, 45, 49, 38, 62, 4, 13, 6, 3, 36], 'IL': [59, 24, 44, 64, 53, 18, 7, 33, 41, 45, 8, 19, 29, 18, 17, 31, 29, 44, 22, 36, 20, 53, 61, 46, 1, 65, 33, 19, 59, 60, 50, 54, 26, 8, 46, 2, 32, 54, 36, 59, 47, 15, 53, 53, 60, 32, 15, 36, 44, 24], 'NY': [56, 54, 64, 10, 6, 6, 63, 22, 53, 32, 16, 17, 62, 45, 26, 58, 59, 19, 41, 17, 10, 65, 11, 61, 23, 2, 22, 25, 0, 35, 9, 45, 12, 5, 38, 51, 9, 18, 16, 55, 64, 31, 8, 59, 63, 61, 37, 27, 30, 48, 54, 16, 24, 11, 43, 26, 53, 48, 22, 35, 39, 42, 58, 52, 7, 40, 56, 51, 9, 0, 3, 25, 58, 26, 1, 55, 64, 60, 33, 0, 58, 7, 60, 39, 12, 60, 59, 12, 38, 13], 'WA': [21, 28, 29, 54, 29, 21, 55, 7, 32, 23, 27, 21, 65, 16, 29, 31, 8, 59, 37, 30, 17, 28, 30, 27, 13, 5, 32, 46, 17, 5, 30, 59, 12]}\n"
+     ]
+    }
+   ],
    "source": [
     "print(lots_of_noise)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable        Type      Data/Info\n",
+      "-----------------------------------\n",
+      "lots_of_noise   dict      n=4\n",
+      "pickle          module    <module 'pickle' from '/A<...>lib/python3.7/pickle.py'>\n",
+      "random          module    <module 'random' from '/A<...>lib/python3.7/random.py'>\n",
+      "sys             module    <module 'sys' (built-in)>\n"
+     ]
+    }
+   ],
    "source": [
     "whos"
    ]
@@ -74,9 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "advanced_python_datatypes.ipynb       my_dataframe.pickle\r\n",
+      "deep_and_shallow_copy.ipynb           noise.pickle\r\n",
+      "\u001b[34mdeep_copy_demo\u001b[m\u001b[m                        pickle_saving_objects_for_later.ipynb\r\n",
+      "instructor_guide_week1_day4.md        readme.md\r\n"
+     ]
+    }
+   ],
    "source": [
     "!ls"
    ]
@@ -90,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,9 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "advanced_python_datatypes.ipynb       my_dataframe.pickle\r\n",
+      "deep_and_shallow_copy.ipynb           noise.pickle\r\n",
+      "\u001b[34mdeep_copy_demo\u001b[m\u001b[m                        pickle_saving_objects_for_later.ipynb\r\n",
+      "instructor_guide_week1_day4.md        readme.md\r\n"
+     ]
+    }
+   ],
    "source": [
     "!ls"
    ]
@@ -116,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,18 +178,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable   Type              Data/Info\n",
+      "--------------------------------------\n",
+      "pickle     module            <module 'pickle' from '/A<...>lib/python3.7/pickle.py'>\n",
+      "random     module            <module 'random' from '/A<...>lib/python3.7/random.py'>\n",
+      "sys        module            <module 'sys' (built-in)>\n",
+      "to_write   BufferedWriter    <_io.BufferedWriter name='noise.pickle'>\n"
+     ]
+    }
+   ],
    "source": [
     "whos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lots_of_noise' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-69f22b4d5ca8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlots_of_noise\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'lots_of_noise' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(lots_of_noise)"
    ]
@@ -152,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,18 +240,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'CA': [10, 0, 17, 33, 44, 55, 18, 40, 51, 1, 37, 27, 29, 61, 25, 21, 50, 11, 49, 34, 60, 65, 22, 56, 61, 4, 14, 48, 24, 64, 7, 26, 10, 1, 3, 24, 7, 54, 10, 6, 65, 18, 57, 20, 65, 54, 31, 36, 60, 20, 39, 6, 41, 60, 41, 38, 33, 44, 56, 8, 28, 13, 8, 27, 13, 20, 29, 24, 51, 5, 1, 27, 52, 57, 21, 18, 25, 45, 50, 58, 9, 21, 32, 48, 39, 63, 38, 42, 55, 38, 45, 45, 49, 38, 62, 4, 13, 6, 3, 36], 'IL': [59, 24, 44, 64, 53, 18, 7, 33, 41, 45, 8, 19, 29, 18, 17, 31, 29, 44, 22, 36, 20, 53, 61, 46, 1, 65, 33, 19, 59, 60, 50, 54, 26, 8, 46, 2, 32, 54, 36, 59, 47, 15, 53, 53, 60, 32, 15, 36, 44, 24], 'NY': [56, 54, 64, 10, 6, 6, 63, 22, 53, 32, 16, 17, 62, 45, 26, 58, 59, 19, 41, 17, 10, 65, 11, 61, 23, 2, 22, 25, 0, 35, 9, 45, 12, 5, 38, 51, 9, 18, 16, 55, 64, 31, 8, 59, 63, 61, 37, 27, 30, 48, 54, 16, 24, 11, 43, 26, 53, 48, 22, 35, 39, 42, 58, 52, 7, 40, 56, 51, 9, 0, 3, 25, 58, 26, 1, 55, 64, 60, 33, 0, 58, 7, 60, 39, 12, 60, 59, 12, 38, 13], 'WA': [21, 28, 29, 54, 29, 21, 55, 7, 32, 23, 27, 21, 65, 16, 29, 31, 8, 59, 37, 30, 17, 28, 30, 27, 13, 5, 32, 46, 17, 5, 30, 59, 12]}\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_noise)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable    Type              Data/Info\n",
+      "---------------------------------------\n",
+      "new_noise   dict              n=4\n",
+      "pickle      module            <module 'pickle' from '/A<...>lib/python3.7/pickle.py'>\n",
+      "random      module            <module 'random' from '/A<...>lib/python3.7/random.py'>\n",
+      "read_file   BufferedReader    <_io.BufferedReader name='noise.pickle'>\n",
+      "sys         module            <module 'sys' (built-in)>\n",
+      "to_write    BufferedWriter    <_io.BufferedWriter name='noise.pickle'>\n"
+     ]
+    }
+   ],
    "source": [
     "whos"
    ]
@@ -194,9 +295,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Yay</th>\n",
+       "      <th>specific</th>\n",
+       "      <th>column</th>\n",
+       "      <th>names</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-3.603416</td>\n",
+       "      <td>3.963673</td>\n",
+       "      <td>3.872285</td>\n",
+       "      <td>-1.412058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-3.477865</td>\n",
+       "      <td>0.936539</td>\n",
+       "      <td>-8.826503</td>\n",
+       "      <td>-1.000422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9.460924</td>\n",
+       "      <td>-1.443463</td>\n",
+       "      <td>8.636737</td>\n",
+       "      <td>1.949540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.069100</td>\n",
+       "      <td>2.298276</td>\n",
+       "      <td>7.883493</td>\n",
+       "      <td>-4.169224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.836868</td>\n",
+       "      <td>3.890165</td>\n",
+       "      <td>2.953114</td>\n",
+       "      <td>-7.260364</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Yay  specific    column     names\n",
+       "0 -3.603416  3.963673  3.872285 -1.412058\n",
+       "1 -3.477865  0.936539 -8.826503 -1.000422\n",
+       "2  9.460924 -1.443463  8.636737  1.949540\n",
+       "3  5.069100  2.298276  7.883493 -4.169224\n",
+       "4  5.836868  3.890165  2.953114 -7.260364"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -207,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,9 +399,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-3975f6306adf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "del df\n",
     "\n",
@@ -228,9 +422,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Yay</th>\n",
+       "      <th>specific</th>\n",
+       "      <th>column</th>\n",
+       "      <th>names</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-3.603416</td>\n",
+       "      <td>3.963673</td>\n",
+       "      <td>3.872285</td>\n",
+       "      <td>-1.412058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-3.477865</td>\n",
+       "      <td>0.936539</td>\n",
+       "      <td>-8.826503</td>\n",
+       "      <td>-1.000422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9.460924</td>\n",
+       "      <td>-1.443463</td>\n",
+       "      <td>8.636737</td>\n",
+       "      <td>1.949540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.069100</td>\n",
+       "      <td>2.298276</td>\n",
+       "      <td>7.883493</td>\n",
+       "      <td>-4.169224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.836868</td>\n",
+       "      <td>3.890165</td>\n",
+       "      <td>2.953114</td>\n",
+       "      <td>-7.260364</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Yay  specific    column     names\n",
+       "0 -3.603416  3.963673  3.872285 -1.412058\n",
+       "1 -3.477865  0.936539 -8.826503 -1.000422\n",
+       "2  9.460924 -1.443463  8.636737  1.949540\n",
+       "3  5.069100  2.298276  7.883493 -4.169224\n",
+       "4  5.836868  3.890165  2.953114 -7.260364"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with open('my_dataframe.pickle','rb') as read_file:\n",
     "    new_df = pickle.load(read_file)\n",
@@ -261,9 +536,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -274,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
